--- a/income_val.ipynb
+++ b/income_val.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,12 +145,18 @@
     "    FirstName: str = Field(description=\"First Name in the name\")\n",
     "    LastName: str = Field(description=\"Last Name in the name\")\n",
     "    Date: str = Field(description= \"Date of the payslip\")\n",
+    "\n",
+    "    def has_empty_fields(self) -> bool:\n",
+    "        for field_name, field_value in self.__dict__.items():\n",
+    "            if field_value is None or (isinstance(field_value, str) and field_value.strip() == \"\"):\n",
+    "                return True\n",
+    "        return False\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,13 +176,17 @@
     "    if response.Verification == False :\n",
     "        return \"Incorrect Document Uploaded\"\n",
     "    else :\n",
+    "\n",
+    "        if response.has_empty_fields() :\n",
+    "            return \"reupload better image\"\n",
+    "        \n",
     "        #logic for comparing given first and last name to db\n",
     "        return is_date_less_than_two_months(response.Date)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,12 +195,18 @@
     "    FirstName: str = Field(description=\"First Name in the name\")\n",
     "    LastName: str = Field(description=\"Last Name in the name\")\n",
     "    Firstdate: str = Field(description=\"date of the first transaction in the ledger in YYYY-MM-DD\")\n",
-    "    Lastdate : str = Field(description=\"date of the last transaction in the ledger in YYYY-MM-DD\")"
+    "    Lastdate : str = Field(description=\"date of the last transaction in the ledger in YYYY-MM-DD\")\n",
+    "\n",
+    "    def has_empty_fields(self) -> bool:\n",
+    "        for field_name, field_value in self.__dict__.items():\n",
+    "            if field_value is None or (isinstance(field_value, str) and field_value.strip() == \"\"):\n",
+    "                return True\n",
+    "        return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,13 +219,17 @@
     "    if response.Verification == False :\n",
     "        return \"Incorrect Document Uploaded\"\n",
     "    else :\n",
+    "        \n",
+    "        if response.has_empty_fields() :\n",
+    "            return \"reupload better image\"\n",
+    "        \n",
     "        #logic for comparing given first and last name to db\n",
     "        return is_difference_at_least_sixty_days(response.Firstdate, response.Lastdate)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
